issue #11 removed overflow in all windows

--- a/src/assets/utils/_mixin.scss
+++ b/src/assets/utils/_mixin.scss
@@ -32,6 +32,7 @@
   border: 0.0625rem solid rgba(0, 0, 0, 0.12);
   padding: 2.5rem 1.875rem 1.875rem 1.875rem;
   box-sizing: border-box;
+  max-width: 23.75rem;
   &__title {
     font-family: "Quicksand", Arial, sans-serif;
     letter-spacing: 0.075rem;
